--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:watch": "nwb test-react --server"
   },
   "dependencies": {
+    "antd": "^4.1.5",
     "polygon-lookup": "^2.4.0",
     "polygon-tools": "^0.4.8",
     "react-lineto": "^3.1.2",
